# Nidavellir

./: .gitignore  README.md  Technical Memory Architecture.md  package-lock.json  package.json
backend/: pyproject.toml
backend/nidavellir/: main.py  workspace.py
backend/nidavellir/agents/: base.py  chat_harness.py  claude_agent.py  codex_agent.py  events.py  gemini_agent.py  models.py  ollama_cli_agent.py  registry.py  safety.py
backend/nidavellir/commands/: __init__.py  events.py  runner.py  (+1 more)
backend/tests/: test_agent_activity_events.py  test_agent_models.py  test_agent_provider_type.py  test_anomaly_detection.py  test_bad_hybrid_pick_detector.py  test_commands.py  test_context_capacity_rollover.py  test_context_meter.py  test_context_meter_fix.py  test_context_refresh_guard.py  test_conversation_audit_bundle.py  test_conversation_files.py  test_conversation_identity.py  test_conversation_workspace.py  test_conversations_api.py  test_git_status_api.py  test_health.py  test_hybrid_retrieval.py  test_link_refs_api.py  test_memory_activity_export.py  test_memory_injection.py  test_memory_phase1.py  test_memory_quality_api.py  test_memory_state_export.py  test_memory_system.py  test_model_switching.py  test_orchestration_api.py  test_orchestration_inbox_api.py  test_permissions.py  test_pool_manifest_cap.py  test_project_instructions.py  test_prompt_assembly.py  test_provider_registry.py  test_provider_safety.py  test_providers_endpoint.py  test_session_continuity.py  test_skills_core.py  test_skills_import_api_ws.py  test_stale_thread_guard.py  test_token_adapters.py  (+10 more)
(+205 files in other folders)
